--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,7 @@ form input:not(:last-child) {
   display: flex;
   flex-direction: column;
   width: 100%;
+  padding-top: 20px;
 }
 
 .center {
@@ -106,12 +107,14 @@ form input:not(:last-child) {
 
 .tool {
   margin: 10px;
+  flex: 1;
 }
 
 .gallery {
   display: flex;
   flex-direction: row;
   flex-wrap:wrap;
+  justify-content: space-evenly;
 }
 
 .gallery > div {
@@ -128,4 +131,5 @@ form input:not(:last-child) {
 
 button {
   padding: 10px;
+  min-width: 100px;
 }
