--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,6 @@ html, body {
   width: 100%;
   height: 100%;
   margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
@@ -14,13 +12,21 @@ code {
 #root {
   width: 100%;
   height: 100%;
+  display: grid;
+  grid-template-areas: 
+  "header"
+  "content"
+  "content"
+  "content"
+  "content";
 }
 
+/* LOGIN STYLES */
+
 .header {
+  grid-area: header;
   display: flex;
   align-items: center;
-  width: 100%;
-  height: 30%;
   background-color: #0072C6;
 }
 
@@ -35,22 +41,48 @@ code {
 }
 
 .signin {
+  grid-area: content;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0 10px 0 10px;
+}
+
+.link-container {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: 10px;
+}
+
+.icon-link {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  cursor: pointer;
+}
+
+.icon-link :hover{
+  opacity: 50%;
+}
+
+.icon-link > * {
+  color:white;
+  margin: 5px;
 }
 
 form {
   display:flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
   border: solid;
-  padding: 10px;
+  padding-bottom: 20px;
+  max-width: 600px;
 }
 
 form input {
   width: 50%;
-  min-width: 400px;
   padding: 10px;
 }
 
@@ -68,10 +100,13 @@ form input:not(:last-child) {
   color: red;
 }
 
+/* HOME STYLES */
+
 .home {
+  grid-area: content;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  align-items: center;
   padding-top: 20px;
 }
 
@@ -102,12 +137,45 @@ form input:not(:last-child) {
 .toolbar {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   margin-top: 20px;
 }
 
 .tool {
+  margin: 0.2rem;
+}
+
+.gallerytool {
   margin: 10px;
   flex: 1;
+}
+
+.gallerytool :hover {
+  opacity: 20%;
+  background-color: aqua;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.tools {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 10px;
+}
+
+.tool-container {
+  display: flex;
+  flex-direction: row;
+  margin-left: auto;
+}
+
+.green {
+  color: green;
+}
+
+.red {
+  color: red;
 }
 
 .gallery {
@@ -130,6 +198,12 @@ form input:not(:last-child) {
 }
 
 button {
-  padding: 10px;
-  min-width: 100px;
+  padding: 1em;
+  min-width: 70px;
+}
+
+.logout {
+  position: absolute;
+  align-self: flex-end;
+  margin-right: 20px;
 }
